# llm-audiobooks

./: .env.example  .gitignore  README.md  audiobook_gen.py  pyproject.toml  zombies.example.spec.md  zombies.spec.md
