[project]
name = "audiobook-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Lawrence Forman",email = "me@merklejerk.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "openai (>=1.0.0)",
    "python-dotenv (>=0.19.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "llama-cpp-python (>=0.3.8,<0.4.0)",
    "orpheus-cpp (>=0.0.2,<0.0.3)",
    "scipy (>=1.15.2,<2.0.0)",
    "markdown2 (>=2.5.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
